# json_key_extractor

./: .gitlab-ci.yml  Cargo.toml  README.md  todo.org
src/: app.rs  data.rs  input.rs  lib.rs  main.rs  parsing.rs  printer.rs
src/data/: arrays.rs  mod.rs  objects.rs  test_data.rs  values.rs
src/printers/: mod.rs
src/printers/code/: class.rs  language.rs  mod.rs  test.rs
src/printers/scala/: class.rs  mod.rs
src/printers/terminal/: mod.rs  test.rs
tests/: same_structure_inputs.rs
